# graph

./: CHANGELOG.md  MODEL_FORMULATION.md  README.md  RUNBOOK.md  pyproject.toml  read_mat_test.py  requirements.txt  test.py
configs/: mall_train.yaml  mall_train_anchor.yaml  mall_train_ce_base.yaml  mall_train_ce_traj.yaml  mall_train_conservative.yaml  mall_train_crf.yaml
data/mall/: floor1.mat  floor2.mat  floor3.mat  floor4.mat  floor5.mat
data/traj/test/: run1_car_route_gt_101.mat  run1_car_route_neg_101.mat
data/traj/train/: run1_car_route_gt_1.mat  run1_car_route_gt_10.mat  run1_car_route_gt_100.mat  run1_car_route_gt_11.mat  run1_car_route_gt_12.mat  run1_car_route_gt_13.mat  run1_car_route_gt_14.mat  run1_car_route_gt_15.mat  run1_car_route_gt_16.mat  run1_car_route_gt_17.mat  run1_car_route_gt_18.mat  run1_car_route_gt_19.mat  run1_car_route_gt_2.mat  run1_car_route_gt_20.mat  run1_car_route_gt_21.mat  run1_car_route_gt_22.mat  run1_car_route_gt_23.mat  run1_car_route_gt_24.mat  run1_car_route_gt_25.mat  run1_car_route_gt_26.mat  run1_car_route_gt_27.mat  run1_car_route_gt_28.mat  run1_car_route_gt_29.mat  run1_car_route_gt_3.mat  run1_car_route_gt_30.mat  run1_car_route_gt_31.mat  run1_car_route_gt_32.mat  run1_car_route_gt_33.mat  run1_car_route_gt_34.mat  run1_car_route_gt_35.mat  run1_car_route_gt_36.mat  run1_car_route_gt_37.mat  run1_car_route_gt_38.mat  (+1167 more)
runs/mall_final/: checkpoint.pt
scripts/: correct_one.py  diagnose_corrections.py  test.py  train.py
src/graphmm/: training.py
src/graphmm_mall.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+1209 files in other folders)
