[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphmm-mall"
version = "0.1.0"
description = "Multi-floor mall trajectory correction (Edge-aware GINE + TrajGraph + CRF)"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]